# project-alpha

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/entities/: entity-types.h  troops.cpp  troops.h
src/render/: sprites.cpp  sprites.h
src/world/: world-objects.cpp  world-objects.h
